--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ php:
 
 before_script:
   - composer install --prefer-source
+addons:
+  sonarcloud:
+    organization: "samiachayeb"
+    token:
+      secure: "5620efd93d4938aa61c8343af0339153d3f817de" # encrypted value of your token
 
 script: ./vendor/bin/phpunit --colors tests
+- sonar-scanner
 
 cache:
     directories:
