--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 
 addons:
   sonarcloud:
-    organization: "sanogotech"
+    organization: "samiachayeb"
     token:
       secure: "5620efd93d4938aa61c8343af0339153d3f817de" # encrypted value of your token
 
